implementations/rust/ockam/ockam/tests/node_attribute/fails_if_passed_param_is_wrong_type.stderr
error: Expected `ockam::Context` found `std::string::String`
 --> $DIR/fails_if_passed_param_is_wrong_type.rs:5:20
  |
5 | async fn main(ctx: std::string::String) {}
  |                    ^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fails_if_passed_param_is_wrong_type.rs:4:1
  |
4 | / #[ockam::node]
5 | | async fn main(ctx: std::string::String) {}
  | |__________________________________________^ consider adding a `main` function to `$DIR/tests/node_attribute/fails_if_passed_param_is_wrong_type.rs`
